--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "import-map-storage-helper",
   "version": "1.0.0",
   "description": "",
-  "main": "src/index.ts",
+  "main": "dist/index.js",
+  "bin": {
+    "im-storage-helper": "./dist/index.js"
+  },
   "scripts": {
     "build": "tsc",
     "test": "jest",
@@ -19,6 +22,8 @@
   ],
   "author": "Dolmen",
   "license": "Apache-2.0",
+  "repository": "https://github.com/dolmen-tech/import-map-storage-helper",
+  "homepage": "https://github.com/dolmen-tech/import-map-storage-helper#readme",
   "engines": {
     "node": ">=20.0.0"
   },
