--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -14,6 +14,9 @@ jobs:
           node-version: 20
           registry-url: https://registry.npmjs.org
       - name: publish
-        run: npm publish --access public
+        run: |-
+          npm ci
+          npm run build
+          npm publish --access public
         env:
           NODE_AUTH_TOKEN: ${{secrets.NPM_AUTH_TOKEN}}
