--- a/.github/workflows/npm-build.yml
+++ b/.github/workflows/npm-build.yml
@@ -17,5 +17,5 @@ jobs:
       - run: npm ci
       - run: npm run check-format
       - run: npm run lint
-      - run: npm test
-      - run: npm build
+      - run: npm run test
+      - run: npm run build
