--- a/package.json
+++ b/package.json
@@ -6,8 +6,12 @@
   "bin": {
     "im-storage-helper": "./dist/index.js"
   },
+  "files": [
+    "dist/index.js",
+    "dist/Standard.flf"
+  ],
   "scripts": {
-    "build": "tsc",
+    "build": "rollup -c --bundleConfigAsCjs",
     "test": "jest",
     "lint": "eslint src --ext js,ts,tsx",
     "format": "prettier --write .",
@@ -35,6 +39,11 @@
     "figlet": "^1.6.0"
   },
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^25.0.4",
+    "@rollup/plugin-json": "^6.0.0",
+    "@rollup/plugin-node-resolve": "^15.2.1",
+    "@rollup/plugin-terser": "^0.4.3",
+    "@rollup/plugin-typescript": "^11.1.3",
     "@types/figlet": "^1.5.6",
     "@types/jest": "^29.5.4",
     "@types/node": "^20.6.1",
@@ -49,6 +58,9 @@
     "jest": "^29.7.0",
     "prettier": "^2.8.8",
     "pretty-quick": "^3.1.3",
+    "rollup": "^3.29.2",
+    "rollup-plugin-copy": "^3.5.0",
+    "rollup-plugin-preserve-shebang": "^1.0.1",
     "ts-jest": "^29.1.1",
     "typescript": "^5.2.2"
   }
